@@ -4672,6 +4672,8 @@ http://furius.ca/beancount/doc/proposal-query
   it down. Every couple of years I clean this mess up and put it in the sections
   above.
 
+  - Rationalize the strategy for reporting errors.
+
   - Rendering idea: If a posting moved the balance in the unusual direction
     (positive for Income, negative for Expenses), it could be rendered with a
     highlight or a different color. These are rare and unusualy. One could also
