@@ -3,6 +3,8 @@ __license__ = "GNU GPLv2"
 
 import os
 import re
+import textwrap
+import tempfile
 from os import path
 
 from beancount.parser import cmptest
@@ -192,6 +194,34 @@ class TestScriptContextualCommands(cmptest.TestCase):
             test_utils.run_with_args(doctor.main, ['context', filename, '6'])
         self.assertRegex(stdout.getvalue(), 'Location:')
         self.assertRegex(stdout.getvalue(), '50.02')
+
+    @test_utils.docfile
+    def test_context_multiple_files(self, filename):
+        """
+            2013-01-01 open Expenses:Movie
+            2013-01-01 open Assets:Cash
+
+            2014-03-03 * "Something"
+              Expenses:Restaurant   50.02 USD
+              Expenses:Movie        25.00 USD
+              Assets:Cash
+
+            2014-04-04 * "Something"
+              Expenses:Alcohol      10.30 USD
+              Expenses:Movie        25.00 USD
+              Assets:Cash
+        """
+
+        with tempfile.NamedTemporaryFile('w') as topfile:
+            topfile.write(textwrap.dedent("""
+                include "{}"
+            """.format(filename)))
+            topfile.flush()
+            with test_utils.capture() as stdout:
+                test_utils.run_with_args(doctor.main, ['context', topfile.name,
+                                                       '{}:6'.format(filename)])
+            self.assertRegex(stdout.getvalue(), 'Location:')
+            self.assertRegex(stdout.getvalue(), '50.02')
 
     @test_utils.docfile
     def test_linked(self, filename):
